--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc --config ./tsconfig.json",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "postcss": "^7.0.26",
-    "postcss-modules": "^1.5.0"
+    "postcss-modules": "^1.5.0",
+    "rollup": "^1.31.0"
   },
   "description": ""
 }
