--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "noImplicitAny": false,
         "declarationMap": true, /* Generates a sourcemap for each corresponding '.d.ts' file. */
         "sourceMap": true, /* Generates corresponding '.map' file. */
-        "outDir": "./dist", /* Redirect output structure to the directory. */
+        "outDir": "./lib", /* Redirect output structure to the directory. */
         "downlevelIteration": true, /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
         "strict": true, /* Enable all strict type-checking options. */
         "rootDirs": [
