--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "version": "0.0.5",
+  "version": "0.0.6",
   "name": "@yinxulai/rollup-plugin-less",
   "main": "lib/cjs/index.js",
-  "module": "lib/es/index.js",
-  "es2015": "lib/es/index.js",
+  "module": "lib/esm/index.js",
   "jsnext:main": "lib/esnext/index.js",
   "scripts": {
     "build-cjs": "tsc --project ./tsconfig.json",
-    "build-es": "tsc --project ./tsconfig.es.json",
+    "build-esm": "tsc --project ./tsconfig.esm.json",
     "build-esnext": "tsc --project ./tsconfig.esnext.json",
-    "build": "yarn run build-cjs && yarn run build-es && yarn run build-esnext",
-    "publish": "yarn run build && npm publish"
+    "build": "yarn run build-cjs && yarn run build-esm && yarn run build-esnext"
   },
   "keywords": [
     "less",
@@ -23,26 +21,30 @@
   ],
   "homepage": "https://github.com/yinxulai/rollup-plugin-less",
   "author": "yinxulai@hotmail.com",
+  "description": "",
   "license": "ISC",
   "dependencies": {
-    "rollup-plugin-typescript": "^1.0.1"
+    "less": "^3.11.1",
+    "postcss": "^7.0.26",
+    "autoprefixer": "^9.7.4",
+    "postcss-modules": "^1.5.0",
+    "rollup-pluginutils": "^2.8.2"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^3.0.0",
+    "tslib": ">=1.10.0",
+    "rollup": ">=1.31.0",
+    "typescript": ">=3.7.5",
     "@types/css": "^0.0.31",
     "@types/less": "^3.0.1",
     "@types/node": "^13.7.0",
-    "autoprefixer": "^9.7.4",
-    "less": "^3.11.1",
-    "postcss": "^7.0.26",
-    "postcss-modules": "^1.5.0",
-    "rollup": "^1.31.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "@rollup/plugin-typescript": "^3.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-pluginutils": "^2.8.2",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
+    "rollup-plugin-peer-deps-external": "^2.2.2"
   },
-  "description": ""
+  "peerDependencies": {
+    "tslib": ">=1.10.0",
+    "rollup": ">=1.31.0",
+    "typescript": ">=3.7.5"
+  }
 }
